# ai-manga-localization

./: .gitignore  example.txt  main.py  ner.ipynb  ner.py  pyproject.toml  server.py  translate.ipynb  translate.py
ai-manga-backend/: .gitignore  example2.txt  main.py  ner.py  pyproject.toml  server.py  test.ipynb  translate.py  utils.py
ai-manga-frontend/: package-lock.json  package.json  tailwind.config.ts
ai-manga-frontend/app/: globals.css  layout.tsx  page.tsx  styles.module.css
